cabal-version:      2.4

name:               defloc
version:            0.1.0.0
synopsis:           Finds locations of function definitions in shell scripts
description:        Simple tool based on ShellCheck's parser that can be used
                    to find definitions of functions in shell scripts.

homepage:           https://github.com/lzaoral/defloc
bug-reports:        https://github.com/lzaoral/defloc/issues
license:            GPL-3.0-only
license-file:       LICENSE

author:             Lukáš Zaoral
maintainer:         lzaoral@redhat.com
copyright:          (c) 2021 Red Hat, Inc.

category:           Development

extra-source-files: CHANGELOG.md

executable defloc
    main-is:          Main.hs
    other-modules:
    other-extensions: TupleSections
    build-depends:
                      base >= 4 && < 5,
                      containers,
                      mtl,
                      regex-pcre,
                      ShellCheck >= 0.7.2 && < 0.9
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
