cabal-version:      2.4

name:               defloc
version:            0.2.0.0
synopsis:           Finds locations of function definitions in shell scripts
description:        Simple tool based on ShellCheck's parser that can be used
                    to find definitions of functions in shell scripts.

homepage:           https://github.com/lzaoral/defloc
bug-reports:        https://github.com/lzaoral/defloc/issues
license:            GPL-3.0-only
license-file:       LICENSE

author:             Lukáš Zaoral
maintainer:         lzaoral@redhat.com
copyright:          (c) 2021-2022 Red Hat, Inc.

category:           Development

extra-source-files: CHANGELOG.md,
                    README.md,
                    tests/*.sh

tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.1

source-repository head
    type:     git
    location: https://github.com/lzaoral/defloc.git

library
    exposed-modules:  Defloc
    other-extensions: TupleSections
    build-depends:    base >= 4 && < 5,
                      containers,
                      regex-pcre,
                      ShellCheck >= 0.7.2 && < 0.9
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

executable defloc
    main-is:          Main.hs
    other-modules:
    build-depends:    base >= 4 && < 5,
                      defloc
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite test-defloc
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    build-depends:    base >= 4 && < 5,
                      defloc,
                      filepath,
                      HUnit
    hs-source-dirs:   tests
    default-language: Haskell2010
    ghc-options:      -Wall
